[gd_scene load_steps=14 format=2]

[ext_resource path="res://SCRIPTS/achievement_page.gd" type="Script" id=1]
[ext_resource path="res://FONT/nyala.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://LETTERS/exit.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 2 )

[node name="achievement_page" type="Node"]
script = ExtResource( 1 )

[node name="star_point" type="Label" parent="."]
editor/display_folded = true
margin_right = 55.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "RARE POINTS"

[node name="amount" type="Label" parent="star_point"]
margin_left = 8.0
margin_top = 18.0
margin_right = 48.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )

[node name="back_button" type="TouchScreenButton" parent="."]
position = Vector2( 110, 340 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 3 )

[node name="scroll_h" type="ScrollContainer" parent="."]
margin_top = 18.0
margin_right = 209.0
margin_bottom = 341.0

[node name="achievement_box" type="VBoxContainer" parent="scroll_h"]
custom_constants/separation = 135

[node name="first" type="Control" parent="scroll_h/achievement_box"]

[node name="goal_info" type="Label" parent="scroll_h/achievement_box/first"]
margin_left = 80.0
margin_top = 10.0
margin_right = 137.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "GOAL 1 :"

[node name="goal_text" type="Label" parent="scroll_h/achievement_box/first/goal_info"]
margin_left = -19.0
margin_top = 18.0
margin_right = 38.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 4 )

[node name="is_goal_achieved" type="Label" parent="scroll_h/achievement_box/first"]
margin_left = 70.0
margin_top = 50.0
margin_right = 148.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "ACHIEVED? :"

[node name="goal_achieved" type="Label" parent="scroll_h/achievement_box/first/is_goal_achieved"]
margin_left = 18.0
margin_top = 20.0
margin_right = 58.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 6 )

[node name="goal_reward" type="Label" parent="scroll_h/achievement_box/first"]
margin_left = 60.0
margin_top = 85.0
margin_right = 156.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 7 )
text = "GOAL REWARD:"

[node name="reward" type="Label" parent="scroll_h/achievement_box/first/goal_reward"]
margin_left = 37.0
margin_top = 17.0
margin_right = 77.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 8 )

[node name="goal_mult" type="Label" parent="scroll_h/achievement_box/first"]
margin_left = 40.0
margin_top = 118.0
margin_right = 175.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 9 )
text = "REWARD MULTIPLIER:"

[node name="reward_mult" type="Label" parent="scroll_h/achievement_box/first/goal_mult"]
margin_left = 50.0
margin_top = 17.0
margin_right = 90.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 10 )

[connection signal="pressed" from="back_button" to="." method="_on_main_screen_pressed"]
